# mailing_service

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  apps.py  forms.py  mixins.py  models.py  tasks.py  urls.py  views.py
main/fixtures/: blog_posts_fixture.json
main/management/commands/: initial_content_manager_group.py  initial_manager_group.py  run_scheduling.py  start_scheduling.py
main/migrations/: 0001_initial.py  0002_alter_mailingattempt_time.py  0002_mailing_owner.py  0003_client_owner.py  0003_mailing_periodicity.py  0004_blogpost.py  0004_mailingattempt_next_attempt.py  0005_alter_mailing_options.py  0005_remove_mailingattempt_next_attempt_and_more.py
main/templates/main/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
main/templates/main/include/: inc_footer.html  inc_header.html  inc_menu.html
main/templatetags/: custom_filters.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_email_verified.py  0003_alter_user_options.py
users/templates/users/: base.html  edit_profile.html  login.html  password_change_form.html  password_reset.html  registration.html  user_detail.html  user_list.html
users/templates/users/include/: inc_footer.html  inc_header.html
