[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["KudryashovR <romkud55@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
django-environ = "^0.11.2"
apscheduler = "^3.10.4"
django-crispy-forms = "^2.2"
crispy-bootstrap4 = "^2024.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
